# tennis-court-tracker

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  train_model.sh
.dvc/: config
data/: court.py
dockerfiles/: predict_model.dockerfile  train_model.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
notebooks/: make_dataset_exploration.ipynb  predict.ipynb
tennis_court_tracker/: __init__.py  predict_model.py  train_model.py
tennis_court_tracker/conf/: config.yaml
tennis_court_tracker/conf/experiments/: pointperchannel.yaml
tennis_court_tracker/conf/hydra/job_logging/: custom.yaml
tennis_court_tracker/data/: TennisCourtDataset.py  court.py
tennis_court_tracker/models/: model.py  postprocess.py  tracknet.py
tennis_court_tracker/visualizations/: draw_image.py  draw_video.py  visualize.py
